--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="/src/openweather.js"></script>
+  <script src="openweather.js"></script>
     
   <script>
     $(document).ready(function(){
