--- a/index.html
+++ b/index.html
@@ -40,20 +40,19 @@
     .hide {
       display: none;
     }
-
     
   </style>
 </head>
 
 <body>
   <div class="container" style="text-align: center;background-color: aliceblue;margin-top: 5rem;padding: 6rem;">
-    <h1 style="color: darkblue;font-size: 3rem;margin-bottom: 5rem;">It is a Simple Website Api Project which <br> Shows
+    <h1 id="head1" style="color: darkblue;font-size: 3rem;margin-bottom: 5rem;">It is a Simple Website Api Project which <br> Shows
       the Current Weather </h1>
     <input type="text" id="nameid" placeholder="Search your Location"
         style="width: 35rem;padding: 0.8rem;">
     <Button style="padding: 1rem;background-color: aliceblue;">Click Me</Button>
     <div class="main">
-      <div class="weather-wrapper hide" style="position: relative; left: 14rem; top: 2.9rem; display: block;box-shadow: 10px 5px 68px black;">
+      <div class="weather-wrapper hide" id="a1" style="position: relative; left: 14rem; top: 2.9rem; display: block;box-shadow: 10px 5px 68px black;">
         <p><strong>Place</strong>
           <br /><span class="weather-place"></span>
         </p>
